packages/hooks-test/tests/snapshots/no_args__use_one_hook.snap
---
source: packages/hooks-test/tests/no_args.rs
expression: "use_one_hook::hook_impl_code()"
---
fn use_one_hook() -> impl ::hooks::core::Hook<
    (),
> + for<'hook> ::hooks::core::HookLifetime<
    'hook,
    (),
    &'hook (),
    Value = &'hook mut i32,
> + ::hooks::core::HookBounds<Bounds = ()> {
    struct __HookTypes {
        __: ::core::marker::PhantomData<()>,
    }
    impl ::hooks::core::HookBounds for __HookTypes {
        type Bounds = ();
    }
    impl<'hook> ::hooks::core::HookLifetime<'hook, (), &'hook ()> for __HookTypes {
        type Value = &'hook mut i32;
    }
    ::hooks::core::fn_hook::new_fn_hook::<
        (),
        _,
        __HookTypes,
    >(
        ::hooks::use_lazy_pinned(),
        ::hooks::core::HookPollNextUpdate::poll_next_update,
        |__hooks_hook_0, (): ()| {
            let v = ::hooks::core::Hook::<_>::use_hook(__hooks_hook_0, (0,));
            v.get_mut()
        },
    )
}

