packages/hooks-test/tests/snapshots/no_args__use_return.snap
---
source: packages/hooks-test/tests/no_args.rs
expression: "use_return::hook_impl_code()"
---
fn use_return() -> impl ::hooks::core::UpdateHookUninitialized<
    Uninitialized = impl ::hooks::core::HookPollNextUpdate + ::hooks::core::HookUnmount + ::core::default::Default,
    Hook = impl ::hooks::core::Hook + for<'hook> ::hooks::core::HookValue<
        'hook,
        Value = i32,
    >,
> {
    enum __HooksImplNever {}
    struct __HooksValueOfThisHook {
        __: (__HooksImplNever,),
    }
    impl<'hook> ::hooks::core::HookValue<'hook> for __HooksValueOfThisHook {
        type Value = i32;
    }
    ::hooks::core::fn_hook::use_fn_hook::<
        __HooksValueOfThisHook,
        _,
        _,
    >(move |_: ::core::pin::Pin<&mut ::hooks::core::HookTuple<()>>| { 1 })
}
