packages/hooks-test/tests/snapshots/no_args__use_type_param.snap
---
source: packages/hooks-test/tests/no_args.rs
expression: "use_type_param::hook_impl_code()"
---
fn use_type_param<T: Default>() -> impl ::hooks::core::UpdateHookUninitialized<
    Uninitialized = impl ::hooks::core::HookPollNextUpdate + ::hooks::core::HookUnmount + ::core::default::Default,
    Hook = impl ::hooks::core::Hook + for<'hook> ::hooks::core::HookValue<
        'hook,
        Value = T,
    >,
> {
    enum __HooksImplNever {}
    struct __HooksValueOfThisHook<T: Default> {
        __: (__HooksImplNever, ::core::marker::PhantomData<T>),
    }
    impl<'hook, T: Default> ::hooks::core::HookValue<'hook>
    for __HooksValueOfThisHook<T> {
        type Value = T;
    }
    ::hooks::core::fn_hook::use_fn_hook::<
        __HooksValueOfThisHook<T>,
        _,
        _,
    >(move |_: ::core::pin::Pin<&mut ::hooks::core::HookTuple<()>>| { T::default() })
}
